[project]
name = "global-insight-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.3",
    "langchain-core>=1.4.0",
    "langchain-mistralai>=1.1.4",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
